# learning-raft-with-rust

./: Cargo.toml  LICENSE  Makefile  README.md  should_elect_leader_bug.md  should_elect_leader_bug_candidate_should_be_follower_append_same_term.md  should_elect_leader_bug_not_checking_term_on_votes.md  should_elect_leader_bug_stuck_in_candidate_mode.md  should_elect_leader_io_error_corrupt_term.md  should_elect_leader_voting_twice_same_term.md
.github/workflows/: rust.yml
raft_consensus/: Cargo.toml
raft_consensus/src/: common.rs  default_storage.rs  lib.rs  raft_thread.rs  rpc_messages.rs  state_machine.rs
raft_consensus/src/common/: mod.rs  system_clock.rs
raft_consensus/src/raft/: common.rs  default_storage.rs  mod.rs  state_machine.rs  transport.rs
raft_consensus/tests/: raft_tests.rs
raft_consensus/tests/simulator/: common.rs  invariant_checker.rs  mod.rs  sim_log.rs  sim_network.rs  sim_process.rs  sim_transport.rs
raft_grpc/: Cargo.toml
raft_grpc/proto/: raft.proto
raft_grpc/src/: grpc_server.rs  grpc_transport.rs  lib.rs  proto.rs
single_value_store/: Cargo.toml
single_value_store/src/: app.rs  main.rs
single_value_store_client/: Cargo.toml
single_value_store_client/src/: main.rs
single_value_store_cluster/: Cargo.toml
single_value_store_cluster/src/: loc.rs  main.rs
single_value_store_proto/: Cargo.toml  build.rs
single_value_store_proto/proto/: single_value_store.proto
single_value_store_proto/src/: lib.rs
